Changed Math.Clamp to Max/Min